# autokernel

./: .clang-format  .gitignore  .readthedocs.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO  autokernel.py  cliff.toml  config.lark  config.lua  config.toml  config.txt  config_documentation.conf  default_config.conf  example.lua  example.toml  example_config.conf  flake.nix  index_all.sh  pylint-check.sh  requirements-dev.txt  requirements.txt  sat.lua  sat.toml  security_asserts  security_opts  security_sets  setup.cfg  setup.py
autokernel/: __init__.py  autokernel.py  config.lark  config.py  constants.py  device_detector.py  kconfig.py  kernel_option_detector.py  lkddb.py  log.py  node_detector.py  subsystem.py  symbol_tracking.py  util.py
autokernel/contrib/: config.lark
autokernel/contrib/etc/: autokernel.conf
autokernel/contrib/etc/modules_d/: acpi.conf  audio.conf  block.conf  bluetooth.conf  console.conf  crypto.conf  filesystems.conf  hardening.conf  local.conf  local_detected.conf  misc.conf  net.conf  pci.conf  raid.conf  systemd.conf  usb.conf  virt.conf
autokernel/contrib/example_configs/: laptop_autokernel.conf
autokernel/data/: internal.conf
contrib/default/: autokernel.conf
contrib/default/modules.d/: filesystems.conf  hardening.conf
contrib/etc/: autokernel.conf
contrib/etc/modules.d/: raid.conf
docs/: acknowledgements.rst  commands.rst  conf.py  configuration.rst  index.rst  introduction.rst  quick-start-guide.rst  usage.rst
docs/configuration/: concepts.rst  conditions.rst  directives.rst  modules.rst  syntax.rst
docs/contents/: concepts.rst  directives.rst  syntax.rst  usage.rst
docs/info/: license.rst
docs/intro/: introduction.rst  quick-start-guide.rst
example/: autokernel.conf
example/modules.d/: hardening.conf  local.conf  security.conf
examples/: config.lua  hardening.lua  tutorial.lua
src/: bridge.rs  colors.rs  config.rs  kconfig_types.rs  lib.rs  main.rs  validate.rs
src/bridge/: base64.h  bridge.c  expr.rs  interceptor.sh  mod.rs  satisfier.rs  symbol.rs  transaction.rs  transactions.rs  types.rs  vtable.rs
src/bridge/cbridge/: bridge.c  interceptor.sh
src/config/: api.lua  kconfig.rs  lua.rs  mod.rs
src/script/: api.lua  kconfig.rs  lua.rs  mod.rs
tests/: good.kconfig  good.lua  integration_tests.rs  lua_api.rs  setup_teardown.rs
