[package]
name = "autokernel"
version = "2.0.1"
edition = "2021"
authors = ["oddlama <oddlama@oddlama.org>", "clotodex <clotodex@online.de>"]
description = """
Autokernel is a tool for managing your kernel configuration that guarantees semantic correctness.
It checks symbol assignments for validity by creating a native bridge to the kernel's
Kconfig interface and ensures that your configuration does not silently break during kernel updates.
"""
documentation = "https://github.com/oddlama/autokernel"
homepage = "https://github.com/oddlama/autokernel"
repository = "https://github.com/oddlama/autokernel"
keywords = ["kernel", "configuration", "kconfig", "lua"]
categories = ["command-line-utilities"]
license = "MIT"

[features]
index = ["dep:rusqlite"]

[[bin]]
name = "autokernel"

[[bin]]
name = "autokernel-index"
required-features = ["index"]

[dependencies]
libc = "0.2.137"
clap = { version = "4.0.23", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["unbounded_depth"] }
libloading = "0.7.4"
thiserror = "1.0.37"
anyhow = { version = "1.0.66", features = ["backtrace"] }
colored = "2.0.0"
bitflags = "1.3.2"
rlua = "0.19.4"
itertools = "0.10.5"
strum = { version = "0.24.1", features = ["derive"] }
rusqlite = { version = "0.28.0", optional = true }
toml = "0.5.9"
tempdir = "0.3.7"
uuid = { version = "1.2.1", features = ["v4"] }

[dev-dependencies]
serial_test = "0.9.0"

[profile.release]
lto = true

[package.metadata.release]
allow-branch = ["main"]
sign-commit = true
sign-tag = true
pre-release-commit-message = "chore(release): prepare for {{version}}"
post-release-commit-message = "chore(release): bump version to {{next_version}}"
pre-release-replacements = [
    { file="CHANGELOG.md", search="## \\[unreleased\\]", replace = "## [unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file="CHANGELOG.md", search="HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file="CHANGELOG.md", search="\\[unreleased\\]: ", replace = "[unreleased]: https://github.com/oddlama/autokernel/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]

[package.metadata.deb]
section = "utils"
assets = [
	["target/release/autokernel", "usr/bin/", "755"],
	["LICENSE", "usr/share/doc/autokernel/", "644"],
	["README.md", "usr/share/doc/autokernel/README", "644"],
	["examples/config.toml", "etc/autokernel/config.toml", "644"],
	["examples/config.lua", "etc/autokernel/config.lua", "644"],
]
extended-description = """\
Autokernel is a tool for managing your kernel configuration that guarantees semantic correctness.
It checks symbol assignments for validity by creating a native bridge to the kernel's
Kconfig interface and ensures that your configuration does not silently break during kernel updates.
"""
