[package]
name = "autokernel"
version = "2.0.2"
edition = "2021"
authors = ["oddlama <oddlama@oddlama.org>", "clotodex <clotodex@online.de>"]
description = """
Autokernel is a tool for managing your kernel configuration that guarantees semantic correctness.
It checks symbol assignments for validity by creating a native bridge to the kernel's
Kconfig interface and ensures that your configuration does not silently break during kernel updates.
"""
documentation = "https://github.com/oddlama/autokernel"
homepage = "https://github.com/oddlama/autokernel"
repository = "https://github.com/oddlama/autokernel"
keywords = ["kernel", "configuration", "kconfig", "lua"]
categories = ["command-line-utilities"]
license = "MIT"

[features]
index = ["dep:rusqlite", "dep:uuid"]

[[bin]]
name = "autokernel"

[[bin]]
name = "autokernel-index"
required-features = ["index"]

[dependencies]
libc = "0.2.139"
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93", features = ["unbounded_depth"] }
libloading = "0.7.4"
thiserror = "1.0.38"
anyhow = { version = "1.0.69", features = ["backtrace"] }
colored = "2.0.0"
bitflags = "1.3.2"
rlua = "0.19.4"
itertools = "0.10.5"
strum = { version = "0.24.1", features = ["derive"] }
rusqlite = { version = "0.28.0", optional = true }
toml = "0.7.2"
tempfile = "3"
uuid = { version = "1.3.0", features = ["v4"], optional = true }

[dev-dependencies]
serial_test = "1.0.0"

[profile.release]
lto = true

[package.metadata.release]
allow-branch = ["main"]
sign-commit = true
sign-tag = true
pre-release-commit-message = "chore(release): prepare for {{version}}"
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]

[package.metadata.deb]
section = "utils"
assets = [
	["target/release/autokernel", "usr/bin/", "755"],
	["LICENSE", "usr/share/doc/autokernel/", "644"],
	["README.md", "usr/share/doc/autokernel/README", "644"],
	["examples/config.toml", "etc/autokernel/config.toml", "644"],
	["examples/config.lua", "etc/autokernel/config.lua", "644"],
]
extended-description = """\
Autokernel is a tool for managing your kernel configuration that guarantees semantic correctness.
It checks symbol assignments for validity by creating a native bridge to the kernel's
Kconfig interface and ensures that your configuration does not silently break during kernel updates.
"""
