[package]
name = "autokernel"
version = "2.0.2"
edition = "2021"
authors = ["oddlama <oddlama@oddlama.org>", "clotodex <clotodex@online.de>"]
description = """
Autokernel is a tool for managing your kernel configuration that guarantees semantic correctness.
It checks symbol assignments for validity by creating a native bridge to the kernel's
Kconfig interface and ensures that your configuration does not silently break during kernel updates.
"""
documentation = "https://github.com/oddlama/autokernel"
homepage = "https://github.com/oddlama/autokernel"
repository = "https://github.com/oddlama/autokernel"
keywords = ["kernel", "configuration", "kconfig", "lua"]
categories = ["command-line-utilities"]
license = "MIT"

[features]
index = ["dep:rusqlite", "dep:uuid"]

[[bin]]
name = "autokernel"

[[bin]]
name = "autokernel-index"
required-features = ["index"]

[dependencies]
libc = "0.2.158"
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["unbounded_depth"] }
libloading = "0.8.5"
thiserror = "1.0.63"
anyhow = { version = "1.0.87", features = ["backtrace"] }
colored = "2.1.0"
bitflags = "2.6.0"
mlua = { version = "0.9.9", features = ["luajit"] }
itertools = "0.13.0"
strum = { version = "0.26.3", features = ["derive"] }
rusqlite = { version = "0.32.1", optional = true }
toml = "0.8.19"
tempfile = "3"
uuid = { version = "1.10.0", features = ["v4"], optional = true }

[dev-dependencies]
serial_test = "3.1.1"

[profile.release]
lto = true

[package.metadata.release]
sign-commit = true
sign-tag = true
pre-release-commit-message = "chore: release version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
tag-prefix = ""

[package.metadata.deb]
section = "utils"
assets = [
	["target/release/autokernel", "usr/bin/", "755"],
	["LICENSE", "usr/share/doc/autokernel/", "644"],
	["README.md", "usr/share/doc/autokernel/README", "644"],
	["examples/config.toml", "etc/autokernel/config.toml", "644"],
	["examples/config.lua", "etc/autokernel/config.lua", "644"],
]
extended-description = """\
Autokernel is a tool for managing your kernel configuration that guarantees semantic correctness.
It checks symbol assignments for validity by creating a native bridge to the kernel's
Kconfig interface and ensures that your configuration does not silently break during kernel updates.
"""
