[metadata]
name = autokernel

author = oddlama
author-email = oddlama@oddlama.org
maintainer = oddlama
maintainer-email = oddlama@oddlama.org
summary = A tool to autodetect and manage kernel configuration options
description-file = README.md
home-page = https://github.com/oddlama/autokernel
license = MIT
python_requires = >=3.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Security
    Topic :: System :: Operating System Kernels
    Topic :: System :: Operating System Kernels :: Linux
    Topic :: Utilities

keywords =
    autokernel
    kernel
    config
    manager
    detect
    detection

[files]
packages =
    autokernel

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[bdist_wheel]
universal = 1
